Corección inicial de setup

--- a/assets/prepros-6.config
+++ b/assets/prepros-6.config
@@ -13,7 +13,9 @@
     }
   ],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "js"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
