--- a/assets/prepros-6.config
+++ b/assets/prepros-6.config
@@ -14,7 +14,9 @@
   ],
   "fileTree": {
     "expandedDirs": [
-      "js"
+      "scss",
+      "css",
+      "scss/layouts"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
