Setup de estilos, add heder y footer

--- a/assets/prepros-6.config
+++ b/assets/prepros-6.config
@@ -13,11 +13,7 @@
     }
   ],
   "fileTree": {
-    "expandedDirs": [
-      "scss",
-      "css",
-      "scss/layouts"
-    ],
+    "expandedDirs": [],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -39,7 +35,8 @@
         "scss/partials/_variables.scss",
         "scss/modules/loader.scss",
         "scss/layouts/global.scss",
-        "scss/layouts/nav.scss"
+        "scss/layouts/nav.scss",
+        "scss/layouts/footer.scss"
       ]
     }
   ],
