--- a/assets/prepros-6.config
+++ b/assets/prepros-6.config
@@ -10,10 +10,22 @@
     {
       "path": "css/style.css",
       "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":\"-dist\"}"
+    },
+    {
+      "path": "scss/layouts/woocommerce.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"css/woocommerce.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "css/woocommerce.css",
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":\"-dist\"}"
     }
   ],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "scss",
+      "scss/layouts",
+      "css"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -38,10 +50,18 @@
         "scss/layouts/nav.scss",
         "scss/layouts/footer.scss"
       ]
+    },
+    {
+      "path": "scss/layouts/woocommerce.scss",
+      "imports": [
+        "scss/modules/woocommerce/woocommerce.scss",
+        "scss/modules/woocommerce/_mixins.scss",
+        "scss/modules/woocommerce/_woocommerce-base.scss"
+      ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
