Ajustes iniciales woocommerce

--- a/assets/prepros-6.config
+++ b/assets/prepros-6.config
@@ -22,9 +22,7 @@
   ],
   "fileTree": {
     "expandedDirs": [
-      "scss",
-      "scss/layouts",
-      "css"
+      "scss/layouts"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -54,14 +52,14 @@
     {
       "path": "scss/layouts/woocommerce.scss",
       "imports": [
-        "scss/modules/woocommerce/woocommerce.scss",
-        "scss/modules/woocommerce/_mixins.scss",
-        "scss/modules/woocommerce/_woocommerce-base.scss"
+        "scss/partials/_media.scss",
+        "scss/partials/_mixins.scss",
+        "scss/partials/_variables.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
