--- a/assets/prepros-6.config
+++ b/assets/prepros-6.config
@@ -22,7 +22,8 @@
   ],
   "fileTree": {
     "expandedDirs": [
-      "scss/layouts"
+      "scss/layouts",
+      "js"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
