Cambio de fuentes, contacto modal y Layout de Shop page responsive

--- a/assets/prepros-6.config
+++ b/assets/prepros-6.config
@@ -47,6 +47,7 @@
         "scss/modules/loader.scss",
         "scss/layouts/global.scss",
         "scss/layouts/nav.scss",
+        "scss/layouts/contacto.scss",
         "scss/layouts/footer.scss"
       ]
     },
