Relacionados, organizacion de los scss de woocommerce

--- a/assets/prepros-6.config
+++ b/assets/prepros-6.config
@@ -56,7 +56,10 @@
       "imports": [
         "scss/partials/_media.scss",
         "scss/partials/_mixins.scss",
-        "scss/partials/_variables.scss"
+        "scss/partials/_variables.scss",
+        "scss/layouts/woocommerce/global.scss",
+        "scss/layouts/woocommerce/gallery.scss",
+        "scss/layouts/woocommerce/single-product.scss"
       ]
     }
   ],
