Tienda Virtual ajustes de diagramación y estilos inicial

--- a/assets/prepros-6.config
+++ b/assets/prepros-6.config
@@ -23,7 +23,8 @@
   "fileTree": {
     "expandedDirs": [
       "scss/layouts",
-      "js"
+      "scss",
+      "scss/layouts/woocommerce"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -48,7 +49,8 @@
         "scss/layouts/global.scss",
         "scss/layouts/nav.scss",
         "scss/layouts/contacto.scss",
-        "scss/layouts/footer.scss"
+        "scss/layouts/footer.scss",
+        "scss/layouts/woocommerce/carrito.scss"
       ]
     },
     {
