modificacion de la ayuda de navegación

--- a/assets/prepros-6.config
+++ b/assets/prepros-6.config
@@ -61,6 +61,7 @@
         "scss/partials/_variables.scss",
         "scss/layouts/woocommerce/global.scss",
         "scss/layouts/woocommerce/gallery.scss",
+        "scss/layouts/woocommerce/nav.scss",
         "scss/layouts/woocommerce/single-product.scss"
       ]
     }
