Setup woocommerce, npm init

--- a/assets/prepros-6.config
+++ b/assets/prepros-6.config
@@ -24,7 +24,7 @@
     "expandedDirs": [
       "scss/layouts",
       "scss",
-      "scss/layouts/woocommerce"
+      "css"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
