--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-notify": "^3.0.0",
     "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^2.1.2",
     "node-bourbon": "^4.2.8"
   }
