--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "GNU",
   "keywords": [],
   "devDependencies": {
+    "browser-sync": "^2.18.12",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-clean-css": "^3.0.4",
